--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="header">
             <div class="main__cost">
               <h1 class="num1">87 631. <span class="num2">97 грн</span></h1>
-              <span class="tt">Власні кошти &emsp;&emsp; 87 631 грн</span> <br>
-              <span class="tt">Kредитний ліміт &emsp;&emsp; <span class="num3">0</span>.00 грн</span>
+              <span>Власні кошти &emsp;&emsp; 87 631 грн</span> <br>
+              <span>Kредитний ліміт &emsp;&emsp; <span class="num3">0</span>.00 грн</span>
             </div>
             <div class="card">
                <img src="img/mono.png" alt="" class="mono">
@@ -37,9 +37,9 @@
                 <div class="circulll cl"></div>
             </div>
             <div class="t">
-                <div class="tt">Поповнити <br> свою карту</div>
-                <div class="tt">Переказати <br> на карту</div>
-                <div class="tt">Iнші <br>  плптежі</div>
+                <div>Поповнити <br> свою карту</div>
+                <div>Переказати <br> на карту</div>
+                <div>Iнші <br>  плптежі</div>
             </div>
         </div>
     
