--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header">
             <div class="main__cost">
               <h1 class="num1">184 211. <span class="num2">97 грн</span></h1>
-              <span class="v">Власні кошти &emsp;&emsp; 87 631 грн</span> <br>
+              <span class="v">Власні кошти &emsp;&emsp; 184 211. 97 грн</span> <br>
               <span class="v">Kредитний ліміт &emsp;&emsp; <span class="num3">0</span>.00 грн</span>
             </div>
             <div class="card">
