--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="t">
                 <div class="tt">Поповнити <br> свою карту</div>
                 <div class="tt">Переказати <br> на карту</div>
-                <div class="tt">Iнші <br>  плптежі</div>
+                <div class="tt">Iнші <br>  плaтежі</div>
             </div>
         </div>
     
