--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section id="blue">
             <div class="inf">
                 <img src="https://cdn0.iconfinder.com/data/icons/auto-mechanic-1/500/yul944_22_crossed_fixed_key-512.png" id="fix">
-                <span class="in">чини обмеження НБУ</span>
+                <span class="in">чині обмеження НБУ</span>
             </div>
         </section>
         <div id="last">
