--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </div>
     
         <section id="black">
-            <div class="date">4 травня 2023</div>
+            <div class="date">7 июля 2023</div>
             <div class="send">
                 <div class="send__img">
                     <img src="https://cdn4.iconfinder.com/data/icons/internet-networking-and-communication-glyph-24/24/Down_arrow_download_button_downloading_file_download_save_file_1-512.png" id="im">
                    <span class="from"> від: компанії <u>Avenga</u></span>
-                   <div class="send__money">118 000. <span class="zero">грн</span></div>
+                   <div class="send__money">54 000. <span class="zero">грн</span></div>
                 </div>      
             </div>     
         </section>
