--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                     <img src="https://cdn4.iconfinder.com/data/icons/internet-networking-and-communication-glyph-24/24/Down_arrow_download_button_downloading_file_download_save_file_1-512.png" id="im">
                    <span class="from"> від: компанії <u>Avenga</u></span>
                    <div class="send__money">54 000. <span class="zero">грн</span></div>
+                    <hr>
+                    <span class="from"> від: VALERIY FILIPENKO <u>Avenga</u></span>
+                   <div class="send__money">54 000. <span class="zero">грн</span></div>
                 </div>      
             </div>     
         </section>
