--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <div class="header">
             <div class="main__cost">
-              <h1 class="num1">76 223 10. <span class="num2">97 грн</span></h1>
-              <span class="v">Власні кошти &emsp;&emsp; 76 223 10. грн</span> <br>
+              <h1 class="num1">118 983 <span class="num2">97 грн</span></h1>
+              <span class="v">Власні кошти &emsp;&emsp; 118 983 грн</span> <br>
               <span class="v">Kредитний ліміт &emsp;&emsp; <span class="num3">0</span>.00 грн</span>
             </div>
             <div class="card">
