--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             <div class="date">7 июля 2023</div>
             <div class="send">
                 <div class="send__img">
-                    <img src="https://cdn4.iconfinder.com/data/icons/internet-networking-and-communication-glyph-24/24/Down_arrow_download_button_downloading_file_download_save_file_1-512.png" id="im">
-                    <span class="from"> від: VALERIY FILIPENKO 
+<!--                     <img src="https://cdn4.iconfinder.com/data/icons/internet-networking-and-communication-glyph-24/24/Down_arrow_download_button_downloading_file_download_save_file_1-512.png" id="im">
+                    <span class="from"> від: VALERIY FILIPENKO  -->
+                    <span class="from"> від: Valerii Filipenko
                    <div class="send__money">1 000. <span class="zero">грн</span></div>
                 </div>      
             </div>     
